Teste do Pipeline de CI/CD

--- a/src/app/features/sobre/sobre/sobre.html
+++ b/src/app/features/sobre/sobre/sobre.html
@@ -1,5 +1,7 @@
 <section class="sobre">
     <h2>Sobre a Loja TP1</h2>
-    <p>Proejto TP1 Angular</p>
+    <p>Projeto TP1 Angular</p>
+    <p>Projeto TP1 AngularTESTETESTETESTE</p>
+
     <button class="btn ghost" (click)="promocao()">Promoções!!!</button>
 </section>
